Fixes an issue where long links overflow page width
This commit fixes an issue where long links in a bibliography, for example, would overflow the width of post-content.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,6 +369,8 @@ a:active {
     text-decoration: none;
     letter-spacing: 1px;
     color: var(--heading-color);
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
 
 .post .post-title a:hover {
